# shelter-project

./: Cargo.toml  LICENSE  README.md  config.json
entity/: Cargo.toml
entity/src/: dog.rs  lib.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
shelter_main/: Cargo.toml
shelter_main/src/: lib.rs  main.rs  settings.rs
shelter_main/src/api/: mod.rs  v1.rs
shelter_main/src/api/handlers/: dogs.rs  hello.rs  jwt.rs  login.rs  mod.rs
shelter_main/src/api/middleware/: json.rs  jwt.rs  mod.rs
shelter_main/src/api/request/: login.rs
shelter_main/src/api/response/: dogs.rs  error.rs  login.rs  mod.rs
shelter_main/src/commands/: createadmin.rs  hello.rs  migrate.rs  mod.rs  serve.rs
shelter_main/src/state/: mod.rs
