[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
sea-orm = { version = "0.11" }
chrono = { version = "0.4" }
utoipa = { version = "4.1.0", features = ["axum_extras", "chrono"] }
