[package]
name = "shelter_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
config = "0.13"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-log = { version = "0.1" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-opentelemetry = { version = "0.22" }
tower-http = { version = "0.4.3", features = ["trace"] }
arc-swap = "1.6"
sea-orm = { version = "0.11", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
password-hash = "0.5"
argon2 = "0.5"
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
opentelemetry = { version = "0.21.0", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.14.0", features = ["tonic", "metrics", "logs"]  }
opentelemetry-semantic-conventions = { version = "0.13.0" }
opentelemetry-http = "0.10.0"
migration = { path = "../migration" }
entity = { path = "../entity" }
